--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="section content">
           <img src="images/content.svg">
         </div>
-        <div class="section sign-up.svg">
+        <div class="section sign-up">
           <img src="images/sign-up.svg">
         </div>
         <div class="section feature-1">
